--- a/ch01/Makefile
+++ b/ch01/Makefile
@@ -2,7 +2,12 @@ include ../Makefile.defs
 
 .PHONY:clean
 
-hello.s:hello.c
+hello.s:
+
+overwrite_other_proc_var.out:
 
 clean:
-	@rm -fv hello.s
+	@rm -fv \
+		hello.s \
+		*.o \
+		*.out
