--- a/Makefile.defs
+++ b/Makefile.defs
@@ -9,10 +9,12 @@ MAKEFLAGS += --no-builtin-variables
 # 	@echo MAKEFLAGS=$(MAKEFLAGS)
 # 	@echo MAKEOVERRIDES=$(MAKEOVERRIDES)
 
+# Could be overriden
+CC:=gcc
+
 # CFLAGS:=-std=gnu11 -g -O0 -Wall -Wextra -Wno-unused-parameter -Winline -D_GNU_SOURCE -pthread # -fmax-errors=1
 CFLAGS:=-std=gnu11 -g -O0 -Wall -Wextra -Wno-unused-parameter -Winline # -D_GNU_SOURCE -pthread # -fmax-errors=1
 CFLAGS_NDEBUG:=-std=c99 -O1 -Wall -Wextra -Wno-unused-parameter
-# %.o: %.c ; $(CC) -c $(CFLAGS) -o $@ $<
 
 else
 $(error double inclusion)
